[package]
name = "esp32-cirque-bluetooth-trackpad"
version = "0.1.0"
authors = ["Ralf Grubenmann <ralf.grubenmann@gmail.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[[bin]]
name = "esp32-cirque-bluetooth-trackpad"
harness = false                          # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = ["std", "embassy", "esp-idf-svc/native"]

pio = ["esp-idf-svc/pio"]
std = ["alloc", "esp-idf-svc/binstart", "esp-idf-svc/std"]
alloc = ["esp-idf-svc/alloc"]
nightly = ["esp-idf-svc/nightly"]
experimental = ["esp-idf-svc/experimental"]
embassy = [
  "esp-idf-svc/embassy-sync",
  "esp-idf-svc/critical-section",
  "esp-idf-svc/embassy-time-driver",
]

[dependencies]
log = { version = "0.4", default-features = false }
esp-idf-svc = { version = "0.49", default-features = false}
# esp-wifi = { version = "0.9.1", features = ["esp32c3", "ble"] }
esp-idf-hal = "0.44.1"
ws2812-esp32-rmt-driver = { version = "0.9.0", features = ["smart-leds-trait"] }
smart-leds = "0.4.0"
esp32-nimble = "0.7.0"
icm42670 = "0.2.0"
anyhow = "1.0.89"
shared-bus = "0.3.1"
tm040040 =  "0.1.0" 

[build-dependencies]
embuild = "0.32.0"
